<resources>
    <string name="app_name">AstroSeva</string>
    <string name="app_version">Version: 1.0</string>

    //API key
    <string name="vedicastro_apikey" translatable="false">"9386c83e-16c0-525e-ad18-94581fca217a"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_app">Welcome to AstroSeva</string>
    <string name="splash_copyright_text">© AstroSeva 2024. All rights reserved.</string>

    <string name="also_available_on">Also Available On</string>
    <string name="facebook">facebook\n</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube\n</string>
    <string name="twitter">Twitter</string>
    <string name="app_descriptin">AstroSeva is your all-in-one astrology app, offering Kundali creation, Kundali Matching, Daily Panchang updates, and access to experienced astrologers for personalized guidance. Explore our Astro Shop for a wide range of astrology products to support your journey.</string>


    <string-array name="language_array" translatable="false">
        <item>en</item>
        <item>ta</item>
        <item>ka</item>
        <item>te</item>
        <item>hi</item>
        <item>ml</item>
        <item>mr</item>
        <item>bn</item>
        <item>sp</item>
        <item>fr</item>
    </string-array>


</resources>