<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="2dp"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/splash_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:background="@drawable/circle_profile_background"
        android:padding="2dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_gravity="center"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version"
        android:textAppearance="?attr/textAppearanceBody2"
       android:layout_gravity="center"
        android:paddingBottom="16dp" />

    <TextView
        android:background="@drawable/profile_background"
        android:padding="12dp"
        android:gravity="center"
        android:id="@+id/tvAboutApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_descriptin"
        android:textAppearance="?attr/textAppearanceBody2"
        android:paddingBottom="16dp" />

</LinearLayout>
